Import of ELIZABETH/Thread-Queue-Any-Monitored-0.03 from CPAN.
gitpan-cpan-distribution: Thread-Queue-Any-Monitored
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ELIZABETH/Thread-Queue-Any-Monitored-0.03.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.03	18 July 2002
+	Added support for "post" routine, so that a routine will be executed
+	when monitoring stops.  Results of the "post" routine are available
+	with the "join" method on the thread object.
+
 0.02	17 July 2002
 	Added class method "self" for use within the "pre" or "monitor"
 	routine the Thread::Queue::Any::Monitored object they're working for.
