--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+0.05	24 July 2002
+	Made $VERSION and @ISA have the : unique attribute to save memory.
+
+	Fixed some documentation nits.
+
+	23 July 2002
+	Fixed problem with warnings if an undefined exit value was used
+	(the default).
+
 0.04	21 July 2002
 	Added "can_ok" test to test-suite.
 
