Import of ELIZABETH/Thread-Queue-Any-Monitored-0.06 from CPAN.
gitpan-cpan-distribution: Thread-Queue-Any-Monitored
gitpan-cpan-version:      0.06
gitpan-cpan-path:         ELIZABETH/Thread-Queue-Any-Monitored-0.06.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.06	13 August 2003
+	Cleaned up Makefile.PL and updated copyright info.  Made sure the
+	test-suite runs ok with warnings enabled.
+
+	Removed our and ":unique" attribute as with all of my other Thread::xxx
+	modules.
+
 0.05	24 July 2002
 	Made $VERSION and @ISA have the : unique attribute to save memory.
 
