Import of ELIZABETH/Thread-Queue-Any-Monitored-0.07 from CPAN.
gitpan-cpan-distribution: Thread-Queue-Any-Monitored
gitpan-cpan-version:      0.07
gitpan-cpan-path:         ELIZABETH/Thread-Queue-Any-Monitored-0.07.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.07	28 December 2003
+	Added automatic required modules update using Devel::Required.
+
 0.06	13 August 2003
 	Cleaned up Makefile.PL and updated copyright info.  Made sure the
 	test-suite runs ok with warnings enabled.
