--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.01    4 June 2012
+        Upgraded to Devel::ThreadsForks 0.05 and Devel::MaintBlead 0.04.
+        Also upgraded the maint version to 0.11.
+
 1.00    2 June 2012
         The threads/forks check is now done by Devel::ThreadsForks.  Added
         support for maint/blead versions using Devel::MaintBlead.  Updated
