--- a/README
+++ b/README
@@ -17,12 +17,11 @@ All rights reserved.  This program is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
 Version:
- 1.02
+ 0.13
 
 Required Modules:
- Test::More (0.88)
- Thread::Queue::Any (1.11)
- Thread::Queue::Monitored (1.02)
+ Thread::Queue::Any (0.16)
+ Thread::Queue::Monitored (0.14)
 
 Installation:
 This distribution contains two versions of the code: one maintenance version
@@ -49,5 +48,8 @@ systems like so:
 
 If your perl does not support the "blead" version of the code, then it will
 automatically install the "maint" version of the code.
+
+Please note that any additional parameters will simply be passed on to the
+underlying Makefile.PL processing.
 
 
